istio-grafana-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-vts
  namespace: istio-system
spec:
  hosts:
  - "grafana.ishirock.com"
  gateways:
  - grafana-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: grafana
        port:
          number: 3000
