tracing-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tracing-vts
  namespace: istio-system
spec:
  hosts:
  - "tracing.ishirock.com"
  gateways:
  - tracing-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: tracing
        port:
          number: 80
